# flashmonsters-api

./: Dockerfile  README.md  pyproject.toml
api/: main.py
flashmonster/: manage.py
flashmonster/api/: models.py  serializers.py  views.py
flashmonster/flashmonster/: asgi.py  settings.py  urls.py  wsgi.py
